[package]
name = "tiny_servers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "fs"] }
rfd = "0.15"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
